--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btn_coming_soon">COMING SOON</string>
     <string name="msg_no_ticket_found">No ticket found. Try scanning the QR Codes from http://api.androidhive.info/qrcodes/</string>
     <string name="lbl_scan_activity">Scan QR Code</string>
+    <string name="noDateWarning">You don\'t hava pubilic Gist</string>
 </resources>
